# wol-proxy

./: .env.example  README.md  deploy.sh  pyproject.toml
app/: main.py
app/static/css/: styles.css
app/templates/: index.html
nginx/: wol-proxy  wol.sh
